--- a/static/style/pages.css
+++ b/static/style/pages.css
@@ -1,7 +1,7 @@
 
 #landing {
     width: 100%;
-    height: calc(65vh - 25px);
+    height: calc(55vh - 25px);
     padding-top: 25px;
 }
 #landing #content {
@@ -218,7 +218,7 @@ h1 {
 #services #col_flex {
     display: flex;
     gap: 35px;
-    position: sticky;
+    position: none;
     top: 0px;
     flex-direction: column;
     justify-content: end;
@@ -239,7 +239,7 @@ h1 {
     gap: 32px;
     margin-left: 16px;
     cursor: grab;
-    padding-right: 42px;
+    padding-right: 16px;
 }
 #works #slider_parent:active {
     cursor: grabbing;
@@ -270,15 +270,18 @@ h1 {
 #services #title {
     font-size: 1.8rem;
     padding: 0px 0px;
-    font-weight: 600;
     border-radius: 30px;
 }
 #services #context {
     border-radius: 30px;
     /* padding: 25px; */
     padding-top: 0px;
+    font-size: 1.6rem;
     height: 100%;
     /* background-color: var(--gray); */
+}
+#services #context p {
+    font-size: 1.6rem;
 }
 #bottom_shade {
     position: absolute;
@@ -307,7 +310,7 @@ h1 {
 #service #context {
     border-radius: 0px;
     padding-bottom: 29px;
-    border-bottom: 1px solid var(--black);
+    border-bottom: 1px solid #CCCCCC;
 }
 #service:last-child #context {
     border-bottom: 0px solid var(--black);
@@ -375,8 +378,9 @@ h1 {
 #callToAction {
     width: 100%;
     max-width: 800px;
-    height: 90vh;
+    height: 50vh;
     margin-right: auto;
+    min-height: 400px;
     left: 10px;
     transform: none;
     position: relative;
@@ -384,7 +388,7 @@ h1 {
 #callToAction #content {
     width: 100%;
     position: absolute;
-    top: 70%;
+    bottom: 20%;
 }
 #callToAction #content p {
     font-size: 2.4rem;
@@ -392,6 +396,29 @@ h1 {
 #callToAction #content h1 {
     font-size: 6.4rem;
     text-decoration: underline;
+}
+#callToAction #content a#email {
+    width: 100%;
+}
+#callToAction #content a button#email {
+    padding: 18px 0px;
+    width: 100%;
+    border-radius: 80px;
+    background-color: var(--gray);
+    border: 0px;
+    font-size: 2.4rem;
+    color: #303030;
+}
+#callToAction #content #flex {
+    display: flex;
+    width: 100%;
+    margin-top: 15px;
+    gap: 10px;
+    align-items: center;
+}
+#callToAction #content #flex #minicontact.round_icons {
+    position: relative;
+    gap: 10px;
 }
 
 .swiper-container {
@@ -416,11 +443,12 @@ h1 {
 table.case {
     border: 0px;
     width: 100%;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 }
 table.case tr td {
     vertical-align: top;
     padding-right: 15px;
+    padding-top: 3px;
 }
 table.case tr td:first-child {
     white-space: nowrap;
@@ -500,7 +528,11 @@ table.case tr td:first-child {
     right: 0px;
 }
 #minicontact.round_icons button {
-    padding: 15px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
     border: 0px solid var(--black);
     background-color: var(--gray);
@@ -521,6 +553,12 @@ table.case tr td:first-child {
 
 
 @media (min-width: 600px) {
+   
+    #callToAction #content a button#email {
+        padding: 20px 50px;
+        margin-top: 20px;
+        width: auto;
+    }
     #minicontact.round_icons {
         right: 30px;
     }
@@ -562,6 +600,9 @@ table.case tr td:first-child {
     font-size: 2rem;
 }
 @media (min-width: 1000px) {
+    #works #slider_parent {
+        padding-right: 42px;
+    }
     #about a {
         order: 2;
     }
@@ -685,7 +726,7 @@ table.case tr td:first-child {
     }
     #services #slider {
         min-height: 400px;
-        max-height: calc(max(50vh, 550px) + 50px);
+        max-height: calc(max(50vh, 650px) + 50px);
     }
     #services #slider #service {
         max-height: 600px;
